--- a/book/fundamental/03_Fourier_Series.ipynb
+++ b/book/fundamental/03_Fourier_Series.ipynb
@@ -17,6 +17,7 @@
     "%pip install ipympl\n",
     "import numpy as np \n",
     "from matplotlib import pyplot as plt\n",
+    "from  matplotlib import patches, collections\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "from ipywidgets import * # interactive plots\n",
     "import IPython\n",
@@ -271,18 +272,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's plot the periodic signal - taken from here: https://stackoverflow.com/questions/29698213/rectangular-pulse-train-in-python\n",
-    "\n",
-    "\n",
-    "def rect(Tp):\n",
-    "    \"\"\" a function to return a centered rectangular pulse of width Tp \"\"\"\n",
-    "    return lambda t: (-Tp <= t) & (t < Tp)\n",
-    "\n",
-    "def pulse_train(t, at, shape):\n",
-    "    \"\"\"create a train of pulses over t at times at and shape \"\"\"\n",
-    "    return np.sum(shape(t - at[:,np.newaxis]), axis=0)\n",
-    "\n",
-    "\n",
     "Tp = 0.5 # Pulse Width\n",
     "\n",
     "fig, axes = plt.subplots(2,1)\n",
@@ -327,13 +316,12 @@
     "baseline = axes[1].axhline(0, color=\"grey\")\n",
     "\n",
     "verts=np.c_[f_int, np.zeros_like(f_int), f_int, T_ak].reshape(len(T_ak),2,2)\n",
-    "col = matplotlib.collections.LineCollection(verts)\n",
+    "col = collections.LineCollection(verts)\n",
     "axes[1].add_collection(col)\n",
     "\n",
     "\n",
     "line_Freq, = axes[1].plot([], [], 'b')\n",
     "axes[1].set_xlim([-2*4*np.pi, 2*4*np.pi])\n",
-    "#axes[1].set_xlim([-4.1*np.pi, 4.1*np.pi])\n",
     "axes[1].set_ylim([-0.5, 1.2])\n",
     "axes[1].set_ylabel('$T_o  c_n$', color='k')\n",
     "axes[1].set_xlabel('$\\omega$ (rad/s)', color='k')\n",
@@ -370,9 +358,7 @@
     "    markers.set_data(f_int*wo, T_ak)\n",
     "    verts=np.c_[f_int*wo, np.zeros_like(f_int*wo), f_int*wo, T_ak].reshape(len(f_int*wo),2,2)\n",
     "    col.set_segments(verts)\n",
-    "    \n",
-    "#     line_Freq.set_data(f_int*wo, T_ak)\n",
-    "    \n",
+    "        \n",
     "\n",
     "print('See how the signal changes as we increase the period:')\n",
     "interact(update, To = (2,20,0.1)); \n",
@@ -385,18 +371,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's plot the periodic signal - taken from here: https://stackoverflow.com/questions/29698213/rectangular-pulse-train-in-python\n",
-    "\n",
-    "\n",
-    "def rect(Tp):\n",
-    "    \"\"\" a function to return a centered rectangular pulse of width Tp \"\"\"\n",
-    "    return lambda t: (-Tp <= t) & (t < Tp)\n",
-    "\n",
-    "def pulse_train(t, at, shape):\n",
-    "    \"\"\"create a train of pulses over t at times at and shape \"\"\"\n",
-    "    return np.sum(shape(t - at[:,np.newaxis]), axis=0)\n",
-    "\n",
-    "\n",
     "Tp = 0.5 # Pulse Width\n",
     "\n",
     "fig, axes = plt.subplots(2,1)\n",
@@ -407,23 +381,6 @@
     "dt = 0.0001 # time spacing\n",
     "t = np.arange(-5*To, 5*To, dt) # Range of times to plot \n",
     "line, = axes[0].plot([], [], 'k')\n",
-    "# vline = axes[0].axvline(To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
-    "# vline2 = axes[0].axvline(-To, color='red', linestyle='--', linewidth=0.8,alpha=0.3)  # Draw horizontal line at y=0\n",
-    "# label1 = axes[0].text(To-0.2, -1.2, '$T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
-    "# label2 = axes[0].text(-To-0.2, -1.2, '$-T_{o}$', color='red', ha='left', va='bottom', backgroundcolor='white')\n",
-    "\n",
-    "# vline3 = axes[0].axvline(To/2, color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
-    "# vline4 = axes[0].axvline(-(To/2), color='blue', linestyle='--', linewidth=0.8, alpha=0.3)  # Draw horizontal line at y=0\n",
-    "# label3 = axes[0].text((To/2)-0.2, -1.2, '$T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
-    "# label4 = axes[0].text(-(To/2)-0.5, -1.2, '$-T_{o}/2$', color='blue', ha='left', va='bottom', backgroundcolor='white')\n",
-    "\n",
-    "# vline5 = axes[0].axvline(Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
-    "# vline6 = axes[0].axvline(-Tp, color='grey', linestyle='--', linewidth=0.8)  # Draw horizontal line at y=0\n",
-    "\n",
-    "# label5 = axes[0].text(Tp-0.2, -0.7, '$T_{p}$', color='black',  ha='left', va='bottom', backgroundcolor='white')\n",
-    "# label6 = axes[0].text(-Tp-0.2, -0.7, '$-T_{p}$', color='black', ha='left', va='bottom', backgroundcolor='white')\n",
-    "\n",
-    "\n",
     "axes[0].set_ylabel('f(t)', color='k')\n",
     "axes[0].set_xlabel('Time (s)', color='k')\n",
     "axes[0].xaxis.set_major_formatter(FormatStrFormatter('%.1f'))\n",
@@ -440,14 +397,9 @@
     "markers, = axes[1].plot([],[], ls=\"none\", marker=\"o\")\n",
     "baseline = axes[1].axhline(0, color=\"grey\")\n",
     "\n",
-    "# verts=np.c_[f_int, np.zeros_like(f_int), f_int, T_ak].reshape(len(T_ak),2,2)\n",
-    "# col = LineCollection(verts)\n",
-    "# axes[1].add_collection(col)\n",
-    "\n",
     "\n",
     "line_Freq, = axes[1].plot([], [], 'b')\n",
     "axes[1].set_xlim([-2*4*np.pi, 2*4*np.pi])\n",
-    "#axes[1].set_xlim([-4.1*np.pi, 4.1*np.pi])\n",
     "axes[1].set_ylim([-0.7, 4])\n",
     "axes[1].set_ylabel('$T_o  c_n$', color='k')\n",
     "axes[1].set_xlabel('$\\omega$ (rad/s)', color='k')\n",
@@ -462,16 +414,6 @@
     "    fig.canvas.draw_idle()\n",
     "    line.set_data(t, y)\n",
     "    \n",
-    "#     vline.set_xdata([To, To])\n",
-    "#     vline2.set_xdata([-To, -To])\n",
-    "#     label1.set_x(To-0.15)\n",
-    "#     label2.set_x(-To-0.15)\n",
-    "#     vline3.set_xdata([To/2, To/2])\n",
-    "#     vline4.set_xdata([-To/2, -To/2])\n",
-    "#     label3.set_x((To/2)-0.2)\n",
-    "#     label4.set_x(-(To/2)-0.5)\n",
-    "    \n",
-    "    \n",
     "    # Frequency Domain plots\n",
     "    wo = (2*np.pi)/To\n",
     "    \n",
@@ -481,11 +423,7 @@
     "            T_ak[n] = (2*Tp)\n",
     "        else:\n",
     "            T_ak[n] = (2*np.sin(k*wo*Tp))/(k*wo)\n",
-    "    \n",
-    "#     markers.set_data(f_int*wo, T_ak)\n",
-    "#     verts=np.c_[f_int*wo, np.zeros_like(f_int*wo), f_int*wo, T_ak].reshape(len(f_int*wo),2,2)\n",
-    "#     col.set_segments(verts)\n",
-    "    \n",
+    "\n",
     "    line_Freq.set_data(f_int*wo, T_ak)\n",
     "    \n",
     "\n",
