--- a/book/fundamental/06_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/06_Time_Freq_Analysis.ipynb
@@ -30,14 +30,23 @@
     "from pyodide.http import pyfetch\n",
     "%matplotlib ipympl\n",
     "\n",
-    "# Must be the RAW link, not GitHub HTML\n",
+    "# function for reading WAV files from a URL. Must be a RAW link, not GitHub HTML\n",
     "url = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/F2.wav\"\n",
     "\n",
     "async def read_wav_from_url(url):\n",
     "    response = await pyfetch(url)\n",
     "    wav_bytes = await response.bytes()  # get raw binary\n",
-    "    return wavfile.read(io.BytesIO(wav_bytes))\n",
-    "\n"
+    "    fs, data = wavfile.read(io.BytesIO(wav_bytes))\n",
+    "\n",
+    "    # convert to float in [-1, 1]\n",
+    "    if np.issubdtype(data.dtype, np.integer):\n",
+    "        max_val = np.iinfo(data.dtype).max\n",
+    "        data = data.astype(np.float32) / max_val\n",
+    "    else:\n",
+    "        data = data.astype(np.float32)  # already float\n",
+    "    \n",
+    "    return data, fs\n",
+    "      \n"
    ]
   },
   {
@@ -157,7 +166,7 @@
    ],
    "source": [
     "# Import  signal\n",
-    "fs, yy = await read_wav_from_url(url)\n",
+    "yy, fs = await read_wav_from_url(url)\n",
     "yy = yy - np.mean(yy) # Removing the mean of the signal\n",
     "\n",
     "t = np.arange(0,len(yy),1)*(1/fs) # time vector\n",
