--- a/book/fundamental/04_Sampling.ipynb
+++ b/book/fundamental/04_Sampling.ipynb
@@ -52,9 +52,19 @@
     "async def read_wav_from_url(url):\n",
     "    response = await pyfetch(url)\n",
     "    wav_bytes = await response.bytes()  # get raw binary\n",
-    "    return wavfile.read(io.BytesIO(wav_bytes))\n",
+    "    fs, data = wavfile.read(io.BytesIO(wav_bytes))\n",
     "\n",
-    "\n"
+    "    # convert to float in [-1, 1]\n",
+    "    if np.issubdtype(data.dtype, np.integer):\n",
+    "        max_val = np.iinfo(data.dtype).max\n",
+    "        data = data.astype(np.float32) / max_val\n",
+    "    else:\n",
+    "        data = data.astype(np.float32)  # already float\n",
+    "    \n",
+    "    return data, fs\n",
+    "      \n",
+    "  \n",
+    "  "
    ]
   },
   {
@@ -260,7 +270,7 @@
     }
    ],
    "source": [
-    "fs, whistle = await read_wav_from_url(whistle_24k)\n",
+    "whistle, fs = await read_wav_from_url(whistle_24k)\n",
     "t = np.arange(0,len(whistle),1)*(1/fs) # time vector    \n",
     "\n",
     "print(\"Data shape: \", whistle.shape)\n",
@@ -273,7 +283,7 @@
     "time = np.arange(0,N*dt,dt)  \n",
     "\n",
     "\n",
-    "fig, axes = plt.subplots(2, 1, figsize=(10, 8)) \n",
+    "fig, axes = plt.subplots(2, 1) \n",
     "fig.subplots_adjust(hspace=0.7) # spacing between figures\n",
     "\n",
     "axes[0].plot(time,whistle)\n",
@@ -288,7 +298,7 @@
     "# Compute the spectrogram. We set the mode to obtain the magnitude, \n",
     "# i.e absolute magnitude of the short-time Fourier transform (STFT) coefficients.\n",
     "# Note that we are not concerned with the exact magnitude, i.e. sound pressure level of the signal\n",
-    "f_sg, t_sg, Z_mag = signal.spectrogram(whistle[:,0], fs=fs,nperseg=nfft,window='hann',mode='magnitude',noverlap=noverlap)\n",
+    "f_sg, t_sg, Z_mag = signal.spectrogram(whistle, fs=fs,nperseg=nfft,window='hann',mode='magnitude',noverlap=noverlap)\n",
     "Z_dB = 10*np.log10(Z_mag**2 + 1e-16) # convert the magnitude to dB\n",
     "\n",
     "\n",
@@ -300,7 +310,8 @@
     "axes[1].set_xlabel('Time (s)')\n",
     "axes[1].set_ylabel('Frequency (Hz)')\n",
     "axes[1].set_ylim(0,4000)   # Adjust this range if your whistle goes higher!\n",
-    "cb = plt.colorbar(sp,ax=[axes[1]],location='top')\n"
+    "cb = plt.colorbar(sp,ax=[axes[1]],location='top')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -376,7 +387,7 @@
     }
    ],
    "source": [
-    "fs, whistle = await read_wav_from_url(whistle_3k)\n",
+    "whistle, fs = await read_wav_from_url(whistle_3k)\n",
     "t = np.arange(0,len(whistle),1)*(1/fs) # time vector\n",
     "\n",
     "print(\"Data shape: \", whistle.shape)\n",
@@ -389,7 +400,7 @@
     "time = np.arange(0,N*dt,dt)  \n",
     "\n",
     "\n",
-    "fig, axes = plt.subplots(2, 1, figsize=(10, 8)) \n",
+    "fig, axes = plt.subplots(2, 1) \n",
     "fig.subplots_adjust(hspace=0.6) # spacing between figures\n",
     "\n",
     "axes[0].plot(time,whistle)\n",
@@ -405,7 +416,7 @@
     "# Compute the spectrogram. We set the mode to obtain the magnitude, \n",
     "# i.e absolute magnitude of the short-time Fourier transform (STFT) coefficients.\n",
     "# Note that we are not concerned with the exact magnitude, i.e. sound pressure level of the signal\n",
-    "f_sg, t_sg, Z_mag = signal.spectrogram(whistle[:,0], fs=fs,nperseg=nfft,window='hann',mode='magnitude',noverlap=noverlap)\n",
+    "f_sg, t_sg, Z_mag = signal.spectrogram(whistle, fs=fs,nperseg=nfft,window='hann',mode='magnitude',noverlap=noverlap)\n",
     "Z_dB = 10*np.log10(Z_mag**2) # convert the magnitude to dB\n",
     "\n",
     "\n",
@@ -416,7 +427,11 @@
     "sp = axes[1].imshow(Z_dB, origin='lower',aspect='auto',extent=extent)\n",
     "axes[1].set_xlabel('Time (s)')\n",
     "axes[1].set_ylabel('Frequency (Hz)')\n",
-    "cb = plt.colorbar(sp,ax=[axes[1]],location='top')"
+    "cb = plt.colorbar(sp,ax=[axes[1]],location='top')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
