--- a/book/fundamental/06_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/06_Time_Freq_Analysis.ipynb
@@ -17,10 +17,7 @@
    "source": [
     "%pip install ipympl\n",
     "import numpy as np \n",
-    "import scipy as sp\n",
     "from scipy import signal\n",
-    "import sounddevice as sd\n",
-    "import soundfile as sf\n",
     "from matplotlib import pyplot as plt\n",
     "from ipywidgets import * # interactive plots\n",
     "import IPython\n",
@@ -45,8 +42,7 @@
     "    else:\n",
     "        data = data.astype(np.float32)  # already float\n",
     "    \n",
-    "    return data, fs\n",
-    "      \n"
+    "    return data, fs"
    ]
   },
   {
@@ -269,7 +265,7 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(figsize=(12, 6)) \n",
+    "fig, axes = plt.subplots() \n",
     "\n",
     "# Computing the spectrogram. We use the package signal which has a spectrogram function\n",
     "N = 1024        # number of points for the FFT \n",
@@ -306,7 +302,7 @@
     "print('Move the slider to see the spectrogram for different values of nfft and noverlap:')\n",
     "interact(update, N = (2**5,2**11,2**3), noverlap =(0.1, 0.9,0.1));\n",
     "\n",
-    "IPython.display.display(Audio(yy.T, rate=fs))\n"
+    "IPython.display.display(Audio(yy.T, rate=fs))"
    ]
   },
   {
