--- a/book/fundamental/05_DFT.ipynb
+++ b/book/fundamental/05_DFT.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -219,11 +219,14 @@
     "\n",
     "# Let us plot the Magnitude-Squared \n",
     "\n",
-    "fig, axes = plt.subplots(figsize=(8, 4)) \n",
+    "fig, axes = plt.subplots() \n",
     "axes.plot(freqs,10*np.log10(np.abs(YYss**2)))\n",
     "axes.set_title('FFT of singing')\n",
     "axes.set_xlabel('Frequency (Hz)')\n",
     "axes.set_ylabel('Magnitude-Squared of FFT coefficients (dB)')\n",
+    "axes.set_xlim([0, 10000])\n",
+    "axes.set_ylim([-20, 80])\n",
+    "\n",
     "\n",
     "print(N)\n",
     "\n",
@@ -232,7 +235,75 @@
     "print(YY[N//2 - 1])\n",
     "print(YY[N//2])\n",
     "print(YY[N//2 + 1])\n",
-    "print(YY[N//2 + 2])\n"
+    "print(YY[N//2 + 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Interactive plot\n",
+    "frame_size=0.2 # Frame size in seconds\n",
+    "hop_size=frame_size/2  # Hop size in seconds\n",
+    "frame_len = int(frame_size * fs) # Frame length in samples\n",
+    "hop_len   = int(hop_size * fs) # Hop length in samples\n",
+    "\n",
+    "fig, axes = plt.subplots(2,1)\n",
+    "waveform, = axes[0].plot([], [])\n",
+    "axes[0].set_xlabel('Time (s)')\n",
+    "axes[0].set_ylabel('Amp')\n",
+    "axes[0].set_xlim([0, frame_size])\n",
+    "axes[0].set_ylim([-0.2, 0.2])\n",
+    "\n",
+    "fftplot, = axes[1].plot([], [], label='original')\n",
+    "fftpeaks, = axes[1].plot([], [], \"mx\",linewidth=2)\n",
+    "axes[1].set_xlim([0, 4000])\n",
+    "axes[1].set_ylim([-150, -50])\n",
+    "\n",
+    "axes[1].set_xlabel('Frequency (Hz)')\n",
+    "axes[1].set_ylabel('dB/Hz')\n",
+    "# axes[1].legend()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# number of complete frames we can fit\n",
+    "n_frames = 1 + (len(y) - frame_len) // hop_len\n",
+    "\n",
+    "energies = np.zeros(n_frames)\n",
+    "frame_times = np.zeros(n_frames)\n",
+    "zcr = np.zeros(n_frames)\n",
+    "\n",
+    "\n",
+    "def update(i=0):\n",
+    "\n",
+    "    start = i * hop_len\n",
+    "    frame = yy[start:start+frame_len]\n",
+    "    fig.canvas.draw_idle()\n",
+    "    \n",
+    "    YY = np.fft.fft(yy,axis=0)  # make sure to specify the axis. zero in this case since the data is along the first axis.\n",
+    "                            # Since yy was an Nx1 vector, python wants to know just where the \"N\" values are, i.e. in axis = 0\n",
+    "    YYss = YY[0:N//2+1]  # Single sided spectrum. The last value will be N/2, since python goes up to N-1 when slicing vectors like this.\n",
+    "\n",
+    "    df = fs/N  # the frequency bin spacing\n",
+    "    freqs = np.arange(0,fs/2+df,df) # first value = DC, last value = fs/2\n",
+    "    \n",
+    "    t = np.arange(0,frame_len/fs,1/fs)\n",
+    "    # print(start/fs)\n",
+    "    # print(frame_len/fs)\n",
+    "    \n",
+    "    waveform.set_data(t, frame)\n",
+    "    fftplot.set_data(freqs, YYss)\n",
+    "\n",
+    "    IPython.display.display(Audio(frame.T, rate=fs,normalize=True))\n",
+    "\n",
+    "print('Move the slider to see how the hyperparameters affect performance ')\n",
+    "interact(update, i=(0,n_frames,1));\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
