all fundamental scripts working, text to be edited

--- a/book/fundamental/01_Sinusoidal_Model.ipynb
+++ b/book/fundamental/01_Sinusoidal_Model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Sinusoidal model\n",
+    "## The sinusoidal model\n",
     "This jupyter notebook gives some intuition on how the parameters of the sinusoidal model affect the signal both visually and audibly. \n",
     "\n"
    ]
