--- a/book/fundamental/05_DFT.ipynb
+++ b/book/fundamental/05_DFT.ipynb
@@ -211,21 +211,21 @@
     "N = len(yy)\n",
     "YY = np.fft.fft(yy,axis=0)  # make sure to specify the axis. zero in this case since the data is along the first axis.\n",
     "                            # Since yy was an Nx1 vector, python wants to know just where the \"N\" values are, i.e. in axis = 0\n",
-    "YYss = YY[0:N//2+1]  # Single sided spectrum. The last value will be N/2, since python goes up to N-1 when slicing vectors like this.\n",
+    "#YYss = YY[0:N//2+1]  # Single sided spectrum. The last value will be N/2, since python goes up to N-1 when slicing vectors like this.\n",
     "\n",
     "#Set up the frequency vector\n",
     "df = fs/N  # the frequency bin spacing\n",
-    "freqs = np.arange(0,fs/2+df,df) # first value = DC, last value = fs/2\n",
+    "freqs = np.arange(0,fs,df) # first value = DC, last value = fs/2\n",
     "\n",
     "# Let us plot the Magnitude-Squared \n",
     "\n",
     "fig, axes = plt.subplots() \n",
-    "axes.plot(freqs,10*np.log10(np.abs(YYss**2)))\n",
+    "axes.plot(freqs,10*np.log10(np.abs(YY**2)))\n",
     "axes.set_title('FFT of singing')\n",
     "axes.set_xlabel('Frequency (Hz)')\n",
     "axes.set_ylabel('Magnitude-Squared of FFT coefficients (dB)')\n",
-    "axes.set_xlim([0, 10000])\n",
-    "axes.set_ylim([-20, 80])\n",
+    "#axes.set_xlim([0, 10000])\n",
+    "#axes.set_ylim([-20, 80])\n",
     "\n",
     "\n",
     "print(N)\n",
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "# Interactive plot\n",
-    "frame_size=0.2 # Frame size in seconds\n",
+    "frame_size=0.3 # Frame size in seconds\n",
     "hop_size=frame_size/2  # Hop size in seconds\n",
     "frame_len = int(frame_size * fs) # Frame length in samples\n",
     "hop_len   = int(hop_size * fs) # Hop length in samples\n",
@@ -255,12 +255,12 @@
     "axes[0].set_xlabel('Time (s)')\n",
     "axes[0].set_ylabel('Amp')\n",
     "axes[0].set_xlim([0, frame_size])\n",
-    "axes[0].set_ylim([-0.2, 0.2])\n",
+    "axes[0].set_ylim([-0.6, 0.6])\n",
     "\n",
     "fftplot, = axes[1].plot([], [], label='original')\n",
     "fftpeaks, = axes[1].plot([], [], \"mx\",linewidth=2)\n",
-    "axes[1].set_xlim([0, 4000])\n",
-    "axes[1].set_ylim([-150, -50])\n",
+    "axes[1].set_xlim([0, 8000])\n",
+    "axes[1].set_ylim([-60, 60])\n",
     "\n",
     "axes[1].set_xlabel('Frequency (Hz)')\n",
     "axes[1].set_ylabel('dB/Hz')\n",
@@ -269,7 +269,7 @@
     "\n",
     "\n",
     "# number of complete frames we can fit\n",
-    "n_frames = 1 + (len(y) - frame_len) // hop_len\n",
+    "n_frames = 1 + (len(yy) - frame_len) // hop_len\n",
     "\n",
     "energies = np.zeros(n_frames)\n",
     "frame_times = np.zeros(n_frames)\n",
@@ -282,28 +282,24 @@
     "    frame = yy[start:start+frame_len]\n",
     "    fig.canvas.draw_idle()\n",
     "    \n",
-    "    YY = np.fft.fft(yy,axis=0)  # make sure to specify the axis. zero in this case since the data is along the first axis.\n",
+    "    YY = np.fft.fft(frame,axis=0)  # make sure to specify the axis. zero in this case since the data is along the first axis.\n",
     "                            # Since yy was an Nx1 vector, python wants to know just where the \"N\" values are, i.e. in axis = 0\n",
-    "    YYss = YY[0:N//2+1]  # Single sided spectrum. The last value will be N/2, since python goes up to N-1 when slicing vectors like this.\n",
+    "    #YYss = YY[0:N//2+1]  # Single sided spectrum. The last value will be N/2, since python goes up to N-1 when slicing vectors like this.\n",
     "\n",
-    "    df = fs/N  # the frequency bin spacing\n",
-    "    freqs = np.arange(0,fs/2+df,df) # first value = DC, last value = fs/2\n",
+    "    df = fs/frame_len  # the frequency bin spacing\n",
+    "    freqs = np.arange(0,fs,df) # first value = DC, last value = fs/2\n",
     "    \n",
     "    t = np.arange(0,frame_len/fs,1/fs)\n",
     "    # print(start/fs)\n",
     "    # print(frame_len/fs)\n",
     "    \n",
     "    waveform.set_data(t, frame)\n",
-    "    fftplot.set_data(freqs, YYss)\n",
+    "    fftplot.set_data(freqs, 10*np.log10(np.abs(YY**2)))\n",
     "\n",
     "    IPython.display.display(Audio(frame.T, rate=fs,normalize=True))\n",
     "\n",
     "print('Move the slider to see how the hyperparameters affect performance ')\n",
-    "interact(update, i=(0,n_frames,1));\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "interact(update, i=(0,n_frames,1));"
    ]
   }
  ],
