sinusoidal model finished

--- a/book/fundamental/01_Sinusoidal_Model.ipynb
+++ b/book/fundamental/01_Sinusoidal_Model.ipynb
@@ -4,17 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The sinusoidal model\n",
-    "This jupyter notebook gives some intuition on how the parameters of the sinusoidal model affect the signal both visually and audibly. \n",
-    "\n"
+    "## The sinusoidal model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Firstly let us import several of the packages we will need. If these packages are not available on your machine, you will have to install them first. "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -22,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hit the live python code button and firstly run this cell to import the necessary packages we'll need.\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
     "from matplotlib.ticker import FormatStrFormatter\n",
@@ -36,15 +33,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The sinusoidal model\n",
+    "### A mathematical representation of sound\n",
     "\n",
-    "We recall the sinusoidal model as follows:\n",
+    "The sinusoidal model is mathematically defined as\n",
     "\n",
     "$\\begin{equation}\n",
     "y(t) = A\\cos(2 \\pi f_{o}t +\\theta)\n",
     "\\end{equation}$\n",
     "\n",
-    "where $A$ is the amplitude, $f_{o}$ is the fundamental frequency (Hz), $t$ is the time (seconds), and $\\theta$ is a phase offset (radians). This is one of the most fundamental and useful models in audio signal processing and is the building block of many other types of sounds. Let's have a look at how the parameters affect the look and sound of this signal!\n"
+    "where $A$ is the amplitude, $f_{o}$ is the fundamental frequency (Hz), $t$ is the time (seconds), and $\\theta$ is a phase offset (radians). This is one of the most fundamental and useful models in audio signal processing and is the building block of many other types of sounds. \n",
+    "\n",
+    "Let's have a look at how the parameters affect the look and sound of this signal. Running the following cell brings up a number of sliders which correspond to the parameters, $A$, $f_{o}$, and $\\theta$. Play around with these to observe how the waveform changes visually and listen to the resulting sounds!\n"
    ]
   },
   {
@@ -122,7 +121,7 @@
     "    IPython.display.display(Audio(y.T, rate=1/dt,normalize=False))\n",
     "\n",
     "\n",
-    "print('Move the slider to see how the parameters change the cosine and listen to the result')\n",
+    "print('Move the slider to see how the parameters change the sinusoid and listen to the result')\n",
     "slider1 = widgets.FloatSlider(min=0.1, max=1, step=0.01, value=0.5, description='Amplitude:', layout=widgets.Layout(width='500'))\n",
     "slider1.style.description_width = '120px'\n",
     "\n",
@@ -142,7 +141,7 @@
    "source": [
     "### Some fun things\n",
     "\n",
-    "We can \"modulate\" the sinusoid by making the phase offset some function of time. In the following, I've made the phase offset a sinusoidal signal with some frequency $f_2$. Feel free to change the function to whatever you like, and see how the waveform changes, and what it sounds like!"
+    "We can \"modulate\" the sinusoid by making the phase offset some function of time. In the following, I've made the phase offset a sinusoidal signal with some frequency $f_2$. This is simply one option to make more complex sounds from the basic sinusoidal model, but you have complete liberty to modify the parts of this code as you wish to try different functions for the phase offset, introduce additional parameters, whatever you like really, and then see and hear the immediate impact these modifications. "
    ]
   },
   {
@@ -201,8 +200,8 @@
     "# Setting up the plots - some wildness with phase\n",
     "fig, axes = plt.subplots(figsize=(8,4))\n",
     "\n",
-    "dt = 0.00001 # time spacing\n",
-    "t = np.arange(0,2,dt) # range of times to plot on x-axis\n",
+    "dt = 0.00001            # time spacing\n",
+    "t = np.arange(0,2,dt)   # range of times to plot on x-axis\n",
     "line, = axes.plot([], [], 'k')\n",
     "axes.set_ylabel('Amplitude', color='k')\n",
     "axes.set_xlabel('Time (s)', color='k')\n",
@@ -213,7 +212,7 @@
     "# Create the interactive plot\n",
     "def update_sinusoid(A = 1, fo=100, f2 = 0.1):\n",
     "    \n",
-    "    theta = np.cos(2*np.pi*f2*t)\n",
+    "    theta = np.cos(2*np.pi*f2*t)        # !!! Change this to any function of f2 and time that you like !!!\n",
     "    y = A*np.cos(2*np.pi*fo*t + theta)\n",
     "\n",
     "    line.set_data(t, y)\n",
