--- a/book/fundamental/04_Fourier_Series.ipynb
+++ b/book/fundamental/04_Fourier_Series.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Fourier series and the Fourier transform\n"
+    "## Fourier series and the Fourier transform\n"
    ]
   },
   {
