finished complex numbers

--- a/book/fundamental/02_Complex_numbers.ipynb
+++ b/book/fundamental/02_Complex_numbers.ipynb
@@ -155,9 +155,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting complex numbers \n",
+    "### Plotting complex numbers \n",
     "\n",
-    "### Complex Plane\n",
+    "#### Complex Plane\n",
     "\n",
     "So we know how to plot real numbers on a line but what about complex numbers? How do we visually represent them?\n",
     "Well since we have two distinct parts of the number, real and imaginary, we will have to represent the real part on one number line and the imaginary part on another number line. This constitutes what we refer to as the **complex plane**. In the complex plane, we can essentially represent complex numbers as points on that plane. In the same way we can represent a point (x,y) on the x and y axis, we can also represent (real, imag) on the complex plane. Let's plot an example to see what we mean. \n",
