--- a/book/fundamental/06_Sampling.ipynb
+++ b/book/fundamental/06_Sampling.ipynb
@@ -71,6 +71,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Going discrete\n",
+    "\n",
+    "Up until this point, although not explicitly stating it, we have been working with continuous-time signals. These are signals for which at any point in time, we know its \n",
+    "\n",
     "### From continuous time to discrete time\n",
     "\n",
     "When recording bioacoustic signals (e.g. bird calls), our goal is to get an accurate discrete representation of the signal. The bioacoustic signal at its source is a continuous-time signal, meaning that for any instance of time, we can obtain the amplitude of that signal. \n",
