--- a/book/fundamental/06_Sampling.ipynb
+++ b/book/fundamental/06_Sampling.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "To demonstrate this, I typically record a whistle going up in frequency and at different sample rates. This is the [aliasing whistle demo](https://github.com/randyaliased/acs-sp-demos/blob/main/01_Aliasing_Whistle_Demo.ipynb). Unfortunately these online Jupyter notebooks do not allow for recording, so I'll simply show the results below. I encourage you to download the demo though as it's alot more fun and you can try it with different types of signals.\n",
     "\n",
-    "In the following, the whistle I've recorded goes up to around $2$ kHz (so $B ~= 2$ kHz) and I've recorded it with $f_s = 24$ kHz, so we're not violating the Nyquist-Shannon sampling theroem, i.e., $f_{s} \\geq 2B$. Let's look at the waveforms recorded and its\n",
+    "In the following, the whistle I've recorded goes up to around $2$ kHz. Because this is a (more or less) pure tone, its bandwidth, $B$ is increasing over time until eventually  $B ~= 2$ kHz. I've recorded the whistle with $f_s = 24$ kHz, so we're not violating the Nyquist-Shannon sampling theroem, i.e., $f_{s} \\geq 2B$. Let's look at the waveforms recorded and its\n",
     "[spectrogram](https://randyaliased.github.io/acspjbook/main/fundamental/08_Time_Freq_Analysis.html) to observe the time-frequency content."
    ]
   },
@@ -272,7 +272,7 @@
     "\n",
     "Okay so that has given us a fairly accurate representation of the signal. What you see in the spectrogram is the brightest area corresponding to the highest acoustic pressures recorded. You will perhaps also see changing frequency content of the whistle signal, which has been captured accurately. Admittedly, this is more intuitive when you actually record the signal yourself because the sound of the recorded signal sounds like the sound you produced.\n",
     "\n",
-    "In the following, I've repeated the same whistle with  $B ~= 2$ kHz, but now recorded it at a lower sampling frequency of $f_s = 3$ kHz. In this case, we are in direct violation of the Nyquist-Shannon criterion, i.e., $f_{s} < 2B$. Let's hear what the recorded signal sounds like. \n",
+    "In the following, I've repeated the same whistle with increasing bandwidth until  $B ~= 2$ kHz, but now recorded it at a lower sampling frequency of $f_s = 3$ kHz. In this case, we are in direct violation of the Nyquist-Shannon criterion, i.e., $f_{s} < 2B$. Let's hear what the recorded signal sounds like. \n",
     "\n",
     "The key take away is that if you sampled at too low of a sampling frequency, the signal content that you think might be there is actually not true, but an artifact created by aliasing! So we need to be careful! How? Luckily, in practice, many ADCs have an analog low pass filter, which pre-filters the analog electrical signal so its bandwidth, $B < f_{s}/2$ to guarantee that the Nyquist-Shannon criterion is satisfied before sampling. This type of analog low pass filter is called an anti-aliasing filter."
    ]
@@ -387,19 +387,29 @@
    "source": [
     "### But why did aliasing occur?\n",
     "\n",
-    "In the following code, you will see two columns of figures: the left hand column (LHC) relates to the time domain and on the right hand column (RHC), the frequency domain.\n",
-    "\n",
+    "In the above figure, you may have noticed that the whistle sound seemed to have \"bounced off\" a frequency of $f_s/2$ and started descended downwards instead of upwards. We refer to the frequency $f_s/2$ as the **Nyquist frequency**. But why exactly did this happen? We can explain this mathematically, but perhaps it's a bit more intuitive with the following interactive plot. In the following, I've created a signal with two sinusoids at frequencies $50$ Hz and $75$ Hz, hence the bandwidth, $B = 75$ Hz. You will see two columns of figures: the left hand column (LHC) relates to the time domain and on the right hand column (RHC), the frequency domain.\n",
     "\n",
     "In the time domain, we can think of sampling as a process that involves the multiplication of the continuous time signal (first figure on the LHC) an impulse train, i.e., a series of impulses spaced by $T_s$ seconds (second figure on the LHC). The result is the discrete time/sampled signal in the last figure of the LHC.\n",
     "\n",
-    "In the RHC, the first figure shows the frequency spectrum of the continuous time signal. The second figure is the Fourier transform of the impulse train - which is in fact another impulse train, but the samples are however now separated by $f_s = 1/T_s$ Hz. In the frequency domain, a multiplication in the time domain corresponds to a convolution in the frequency domain. We'll get to convolution later, all that's important to know for now is that the result of this operation is that the frequency spectrum of the continuous time signal is repeated at each of the impulses in the frequency domain impulse train, and recall those impulses are separated at integer multiples of $f_s$. \n",
+    "In the RHC, the first figure shows the magnitude spectrum of the continuous time signal. We are only showing the positive side of the spectrum, but recall that since the spectrum is symmetric around 0 Hz, there is a corresponding negative part, which is simply the magntiudes shown reflected around the y-axis. \n",
     "\n",
-    "In the interactive plot, what you will see is that as you increase $T_{s}$, you decrease $f_{s}$ and so these repeated frequency spectrums begin to overlap with the original frequency spectrum, i.e., **aliasing**, which is unfortunately an irreversible distortion. The plot also makes it evident why the Nyquist-Shannon thereom requires that $fs \\geq 2B$, i.e., the sampling frequency must be greater than or equal to the bandwidth of the continuous-time signal.\n"
+    "The second figure in the RHC is the Fourier transform of the impulse train - which is in fact another impulse train, but the samples are now separated by $f_s = 1/T_s$ Hz. In the frequency domain, a multiplication in the time domain corresponds to a convolution in the frequency domain. We'll get to convolution later, all that's important to know for now is that the result of this operation is that the magnitude spectrum of the continuous time signal (and remember it was symmetric around 0 Hz) is repeated at integer multiples of $f_s$, i.e, at each of those impulses in the frequency domain impulse train. We call these repetitions **frequency replicas** or images. \n",
+    "\n",
+    "In the interactive plot, what you will see is that as you decrease $f_{s}$ (increase $T_{s}$), the impulses on the RHC get closer together, and consequently, the frequency replicas begin to creep up unto the original bandwidth of the continuous-time signal. It eventually reaches a point where the frequency replicas begin to overlap with the original frequency spectrum, i.e., **aliasing** would have now occurred and as you previously heard, this is unfortunately an irreversible distortion. \n",
+    "\n",
+    "Let's mathematically define that. Recall that the bandwidth of our signal is given by $B$. If we observe the first set of frequency replicas around $f_s$, we can represent the lowest frequency in that set as $f_s - B$. In the figure, this is the frequency of the first component (\"arrow\") that you see above $B$ (i.e., the 75 Hz component of the continuous-time signal). The overlap of these two components occurs when:\n",
+    "\n",
+    "$\\begin{align}\n",
+    "f_s - B &<= B \\\\\n",
+    "    f_s &<= 2B\n",
+    "\\end{align}$\n",
+    "\n",
+    "This is why in the whistle example with $f_s = 3$ kHz, as the bandwidth of the whistle was changing from $B ~= 1.5$ kHz to $B ~= 2$ kHz, the aliased component $f_s - B$ (ranging from $1.5$ kHz to $1$ kHz) is what we heard instead. This formulation also makes it evident why the Nyquist-Shannon thereom requires that $fs \\geq 2B$, i.e., the sampling frequency must be greater than or equal to the bandwidth of the continuous-time signal.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +566,9 @@
     "\n",
     "# Define the function that will generate and plot the impulse points\n",
     "\n",
-    "def plot_impulse_train(Ts=Ts_min):\n",
+    "def plot_impulse_train(fs=1000):\n",
+    "    \n",
+    "    Ts = 1/fs\n",
     "    \n",
     "    # For time-domain impulses\n",
     "    # Generate the indices where impulses occur + set values to 1 + update\n",
@@ -567,7 +579,6 @@
     "    col.set_segments(verts)\n",
     "    \n",
     "    # Do the same for freq.\n",
-    "    fs = 1/Ts\n",
     "    freq = np.arange(-10*fs, 11*fs, fs)    \n",
     "    freq_imp = np.ones(len(freq))\n",
     "    markers_fd.set_data(freq, freq_imp)\n",
@@ -587,10 +598,10 @@
     "    \n",
     "    fig.canvas.draw_idle()\n",
     "    print('Sampling Period, Ts = '+str(np.round(Ts,decimals=4))+' s')\n",
-    "    print('Sampling Frequency = '+str(np.round(1/Ts,decimals=2))+' Hz')\n",
+    "    print('Sampling Frequency = '+str(np.round(fs,decimals=2))+' Hz')\n",
     "\n",
-    "print('Change the sampling period to see the impact')\n",
-    "interact(plot_impulse_train, Ts = (Ts_min,0.01,0.0001), format=format_float)"
+    "print('Change the sampling frequency to see the impact')\n",
+    "interact(plot_impulse_train, fs = (100,1000,1), format=format_float)"
    ]
   },
   {
