--- a/book/fundamental/06_Sampling.ipynb
+++ b/book/fundamental/06_Sampling.ipynb
@@ -474,7 +474,7 @@
     "y_disc = make_signal(f1, f2, t)\n",
     "\n",
     "fig, axes = plt.subplots(3,2)\n",
-    "fig.subplots_adjust(wspace=0.3, hspace=0.8)\n",
+    "fig.subplots_adjust(wspace=0.3, hspace=1)\n",
     "\n",
     "# \"Continuous time\" signal\n",
     "axes[0,0].plot(t_cont,y_cont, color='k')\n",
@@ -521,7 +521,7 @@
     "axes[0,1].set_ylabel('Magnitude', color='k')\n",
     "axes[0,1].set_xlabel('Frequency (Hz)', color='k')\n",
     "axes[0,1].grid()\n",
-    "axes[0,1].set_title('Freq. Spectrum of Cont. Time Signal')\n",
+    "axes[0,1].set_title('Mag. Spectrum of Cont. Time Signal')\n",
     "\n",
     "\n",
     "# Freq-Domain Impulse Train\n",
@@ -537,6 +537,7 @@
     "axes[1,1].set_xlim([0, fs_max//2])\n",
     "axes[1,1].set_ylim([-0.2, 1.5])\n",
     "axes[1,1].grid()\n",
+    "axes[1,1].set_title('Mag. Spectrum of Impulse Train')\n",
     "\n",
     "\n",
     "# Frequency Spectrum of discrete time data\n",
@@ -560,7 +561,7 @@
     "axes[2,1].set_ylabel('Magnitude', color='k')\n",
     "axes[2,1].set_xlabel('Frequency (Hz)', color='k')\n",
     "axes[2,1].grid()\n",
-    "axes[2,1].set_title('Freq. Spectrum of Discrete Time Signal')\n",
+    "axes[2,1].set_title('Mag. Spectrum of Discrete Time Signal')\n",
     "\n",
     "\n",
     "\n",
