--- a/book/fundamental/06_Sampling.ipynb
+++ b/book/fundamental/06_Sampling.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Sampling\n",
-    "In practice, we will work with digital audio, meaning that we need to discretize our audio signal in time and amplitude. In this notebook, we discuss discretization in time - sampling. This has some really fundamental consequences on the bandwidth of the sampled signal, and if we don't do it right, we can end up with irreversible distortions. Sampling the starting point for any type of signal processing we want to do, so it's important we have a good understanding of it. As usual, there'll be ome interactive plots/examples to help us along. "
+    "In practice, we will work with digital audio, meaning that we need to discretize our audio signal in time and amplitude. In this notebook, we discuss discretization in time - sampling. This has some really fundamental consequences on the bandwidth of the sampled signal, and if we don't do it right, we can end up with irreversible distortions. Sampling the starting point for any type of signal processing we want to do, so it's important we have a good understanding of it. As usual, there'll be some interactive plots/examples to help us along. "
    ]
   },
   {
