--- a/book/references.bib
+++ b/book/references.bib
@@ -1,6 +1,77 @@
-@misc{jason_moore,
-  title={Learn Multibody Dynamics, SymPy},
-  author={Moore, Jason},
-  howpublished={\url{https://moorepants.github.io/learn-multibody-dynamics/sympy.html}},
-  year={2023}
+@book{bendat2011random,
+  title={Random Data: Analysis and Measurement Procedures},
+  author={Bendat, J.S. and Piersol, A.G.},
+  isbn={9781118210826},
+  series={Wiley Series in Probability and Statistics},
+  year={2011},
+  publisher={Wiley}
 }
+
+@book{zolzer2011dafx,
+  edition = {2nd},
+  editor = {Z{\"o}lzer, U.},
+  keywords = {DSP audio digital effects},
+  publisher = {Wiley},
+  title = {DAFX: {Digital} {Audio} {Effects}},
+  year = 2011
+}
+
+@book{zolzer2022,
+  title={Digital Audio Signal Processing},
+  author={Z{\"o}lzer, U.},
+  isbn={9781119832676},
+  lccn={2021059110},
+  year={2022},
+  publisher={Wiley}
+}
+
+@book{vorlanderAural,
+  title={Auralization: Fundamentals of Acoustics, Modelling, Simulation, Algorithms and Acoustic Virtual Reality},
+  author={Vorl{\"a}nder, M.},
+  isbn={9783540488309},
+  lccn={2007932291},
+  year={2008},
+  publisher={Springer Berlin Heidelberg}
+}
+
+
+@book{OppenheimSignals,
+author = {Oppenheim, Alan V. and Willsky, Alan S. and Nawab, S. Hamid},
+title = {Signals \& Systems (2nd Ed.)},
+year = {1996},
+isbn = {0138147574},
+publisher = {Prentice-Hall, Inc.},
+address = {USA}
+}
+
+@book{MorseIngaard68,
+publisher = {McGraw-Hill},
+isbn = {0070433305},
+year = {1968},
+title = {Theoretical acoustics},
+language = {eng},
+address = {New York, USA},
+author = {Morse, Philip McCord and Ingard, K. Uno},
+}
+
+@book{Oppenheim2009,
+	author = {Oppenheim, Alan V. and Schafer, Ronald W.},
+	title = {Discrete-Time Signal Processing},
+	year = {2009},
+	isbn = {0131988425},
+	publisher = {Prentice Hall Press},
+	address = {USA},
+	edition = {3rd},
+	abstract = {For senior/graduate-level courses in Discrete-Time Signal Processing. THE definitive, authoritative text on DSP -- ideal for those with an introductory-level knowledge of signals and systems. Written by prominent, DSP pioneers, it provides thorough treatment of the fundamental theorems and properties of discrete-time linear systems, filtering, sampling, and discrete-time Fourier Analysis. By focusing on the general and universal concepts in discrete-time signal processing, it remains vital and relevant to the new challenges arising in the field --without limiting itself to specific technologies with relatively short life spans.}
+}
+
+@book{Vaseghi2008,
+	publisher = {John Wiley and Sons, Ltd},
+	isbn = {9780470740156},
+	title = {Advanced Digital Signal Processing and Noise Reduction},
+	author ={Vaseghi, Saeed V. },
+	year = {2008},
+	keywords = {signal processing methods and applications, communication and signal processing system, signal processing methods - modelling, analysis, coding, synthesis, signal recognition, digital signal processing algorithms, bio-medical signal processing, two-microphone adaptive noise canceller configuration, speech and linear predictive model, Dolby noise reduction systems, offset-binary scalar quantisation},
+	abstract = {Summary This chapter contains sections titled: Signals, Noise and Information Signal Processing Methods Applications of Digital Signal Processing A Review of Sampling and Quantisation Summary Bibliography}
+}
+
