--- a/book/fundamental/07_DFT.ipynb
+++ b/book/fundamental/07_DFT.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discrete Fourier Transform (DFT)\n"
+    "## Discrete Fourier Transform (DFT)\n",
+    "With our newly discretized signals, we'll also have to obtain a discrete version of the Fourier transform as well. There are several concepts to be digested, so let's jump into it."
    ]
   },
   {
@@ -15,6 +16,7 @@
    },
    "outputs": [],
    "source": [
+    "# Installing the packages\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
     "from scipy import signal\n",
@@ -43,6 +45,13 @@
     "        data = data.astype(np.float32)  # already float\n",
     "    \n",
     "    return data, fs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Outline\n"
    ]
   },
   {
@@ -305,7 +314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "acs_demos",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
