--- a/book/fundamental/07_DFT.ipynb
+++ b/book/fundamental/07_DFT.ipynb
@@ -692,8 +692,9 @@
     "hop_size=frame_size/2    # This is an overlap of frames. This value is such that the next frame starts at the midpoint of the previous frame.\n",
     "P = int(frame_size * fs) # Frame length in samples\n",
     "hop_len   = int(hop_size * fs) # Hop length in samples\n",
-    "df = fs/frame_len  # the frequency bin spacing\n",
+    "df = fs/P  # the frequency bin spacing\n",
     "\n",
+    "print(\"Frame length (s) = \",frame_size)\n",
     "print(\"Frame size, P = \",P)\n",
     "print(\"Freq. resolution, df = fs/P = \",df)\n",
     "\n",
@@ -747,39 +748,39 @@
     "axes[0].set_xlim([0, frame_size])\n",
     "axes[0].set_ylim([-0.6, 0.6])\n",
     "\n",
-    "fftplot, = axes[1].plot([], [], label='original')\n",
-    "fftpeaks, = axes[1].plot([], [], \"mx\",linewidth=2)\n",
+    "psdplot, = axes[1].plot([], [])\n",
     "axes[1].set_xlim([0, fs/2])\n",
     "axes[1].set_ylim([-120, -20])\n",
-    "\n",
     "axes[1].set_xlabel('Frequency (Hz)')\n",
     "axes[1].set_ylabel('dB/Hz')\n",
     "\n",
     "\n",
-    "\n",
     "# number of complete frames we can fit\n",
-    "n_frames = 1 + (len(yy) - frame_len) // hop_len\n",
+    "n_frames = 1 + (len(yy) - P) // hop_len\n",
     "\n",
     "def update(i=0):\n",
     "\t\n",
-    "    fig.canvas.draw_idle()\n",
+    "    \n",
     "    \n",
     "    start = i * hop_len\n",
-    "    frame = yy[start:start+frame_len]\n",
+    "    frame = yy[start:start+P]\n",
+    "    t = np.arange(0,P/fs,1/fs)\n",
+    "    # print(\"Start time of frame (s): \",start/fs)\n",
     "    \n",
+    "    # Get PSD\n",
     "    Gxx, fG = psd(frame, fs, 'Single')\n",
-    "        \n",
-    "    t = np.arange(0,frame_len/fs,1/fs)\n",
-    "    # print(start/fs)\n",
-    "    # print(frame_len/fs)\n",
     "    \n",
     "    waveform.set_data(t, frame)\n",
-    "    fftplot.set_data(fG, 10*np.log10(Gxx))\n",
-    "\n",
+    "    psdplot.set_data(fG, 10*np.log10(Gxx))\n",
+    "\t\n",
+    "    fig.canvas.draw_idle()\n",
     "    IPython.display.display(Audio(frame.T, rate=fs,normalize=True))\n",
     "\n",
     "print('Move the slider to analyze the frames of the signal')\n",
     "interact(update, i=(0,n_frames,1))\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
     "\n",
     "\n",
     "\n"
